--- a/views/partials/navegacion.hbs
+++ b/views/partials/navegacion.hbs
@@ -7,10 +7,10 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <form action="/api/product" method="GET"> 
-                        <button type="submit" class="btn btn-dark">REGISTRAR</button>
+                        <button type="submit" class="bar btn btn-dark">REGISTRAR</button>
                     </form>
                     <form action="/api/product/home" method="GET"> 
-                        <button type="submit" class="btn btn-dark">HOME</button>
+                        <button type="submit" class="bar btn btn-dark">HOME</button>
                     </form>
                 </div>
                 </div>
